<resources>
    <string name="app_name">PickApp</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_sender_list">Senders list</string>
    <string name="title_deliver_list">Courier list</string>
    <string name="title_favourite_list">Favourite list</string>
    <string name="title_setting">Settings</string>
    <string name="fast_easy_delivery"><![CDATA[Fast & Easy Delivery]]></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_account">account</string>
    <string name="title_help_center">help_center</string>
    <string name="title_contact_us">contact_us</string>
    <string name="title_dashboard">dashboard</string>
    <string name="facebook_app_id">496388198262314</string>
    <string name="google_api_key">AIzaSyAMVh5cqYrd7-EtTcyrY_2Fn3S6Mvu5fe0</string>
    <string name="google_api_key_new">AIzaSyC6AqyVLby33_9K417eGiEiF4VYr4CAFYM</string>
    <string name="or_sign_in_with"><![CDATA[Or sign in with]]></string>
    <string name="title_notification">notification</string>
</resources>