<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">


    <fragment
        android:id="@+id/navigation_home"
        android:name="com.psgpw.pickapp.fragments.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard">

        <action
            android:id="@+id/action_navigate_to_settingFragment"
            app:destination="@id/navigation_setting" />
    </fragment>

    <fragment
        android:id="@+id/navigation_sender_list"
        android:name="com.psgpw.pickapp.fragments.GetSenderOrDeliverFragment"
        android:label="@string/title_sender_list"
        tools:layout="@layout/fragment_get_sender_deliver">

        <argument
            android:name="request_type"
            android:defaultValue="getSender"
            app:argType="string"
            app:nullable="false" />

        <action
            android:id="@+id/action_navigate_to_settingFragment"
            app:destination="@id/navigation_setting" />
    </fragment>

    <fragment
        android:id="@+id/navigation_deliver_list"
        android:name="com.psgpw.pickapp.fragments.GetSenderOrDeliverFragment"
        android:label="@string/title_deliver_list"
        tools:layout="@layout/fragment_get_sender_deliver">

        <argument
            android:name="request_type"
            android:defaultValue="getDeliver"
            app:argType="string"
            app:nullable="false" />

        <action
            android:id="@+id/action_navigate_to_settingFragment"
            app:destination="@id/navigation_setting" />
    </fragment>

    <fragment
        android:id="@+id/navigation_fav_list"
        android:name="com.psgpw.pickapp.fragments.FavouriteListFragment"
        android:label="@string/title_favourite_list"
        tools:layout="@layout/fragment_favourite_list">

        <action
            android:id="@+id/action_navigate_to_settingFragment"
            app:destination="@id/navigation_setting" />
    </fragment>


    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.psgpw.pickapp.fragments.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting">
        <action
            android:id="@+id/navigate_to_account_fragment"
            app:destination="@id/navigation_account">

        </action>

        <action
            android:id="@+id/navigate_to_notification_fragment"
            app:destination="@id/navigation_notification">

        </action>

        <action
            android:id="@+id/navigate_to_help_center_fragment"
            app:destination="@id/navigation_help_center" />

    </fragment>


    <fragment
        android:id="@+id/navigation_notification"
        android:name="com.psgpw.pickapp.fragments.NotificationFragment"
        android:label="@string/title_notification"
        tools:layout="@layout/fragment_notification">

        <action
            android:id="@+id/action_navigate_to_settingFragment"
            app:destination="@id/navigation_setting" />
    </fragment>


    <fragment
        android:id="@+id/navigation_account"
        android:name="com.psgpw.pickapp.fragments.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account">

        <action
            android:id="@+id/action_navigate_to_settingFragment"
            app:destination="@id/navigation_setting" />
    </fragment>


    <fragment
        android:id="@+id/navigation_help_center"
        android:name="com.psgpw.pickapp.fragments.HelpCenterFragment"
        android:label="@string/title_help_center"
        tools:layout="@layout/fragment_help_center">

        <action
            android:id="@+id/navigate_to_contact_us_fragment"
            app:destination="@id/navigation_contact_us" />

        <action
            android:id="@+id/action_navigate_to_settingFragment"
            app:destination="@id/navigation_setting" />

    </fragment>

    <fragment
        android:id="@+id/navigation_contact_us"
        android:name="com.psgpw.pickapp.fragments.ContactUsFragment"
        android:label="@string/title_contact_us"
        tools:layout="@layout/fragment_contact_us">

        <action
            android:id="@+id/action_navigate_to_settingFragment"
            app:destination="@id/navigation_setting"
            app:popUpTo="@id/navigation_setting"
            app:popUpToInclusive="true" />
    </fragment>


</navigation>